--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
           <button class="Hotspot" slot="hotspot-1" data-position="22.114881038306805m 76.41863141465969m 92.72411936367459m" data-normal="0m 3.422854333301474e-8m 0.9999999999999996m" data-visibility-attribute="visible">
               <div class="HotspotAnnotation" id="hotspot-1">
                 <template id="hotspot-template">
-                  <!-- Image is not showing -->
                   <img src="" alt="" class="image-hotspot">
                   <h2 class="title-hotspot"></h2>
                   <p class="p-hotspot"></p>
@@ -49,8 +48,8 @@
           </div>
         </model-viewer>
 
-        <div class="col-span-full">
-          <h2> Materials</h2>
+        <div class="col-span-full" id="box-materials">
+          <h2> MATERIALS</h2>
                 <ul id="material-list">
                   <!-- Copies of template -->
                 </ul>
