--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div class="grid-con">
-      <div class="col-span-full">
+      <div class="col-span-full" id = "box-models">
         <model-viewer id="model" src="model/earbuds.gltf" ar ar-modes="webxr scene-viewer quick-look" ios-src="model/earbuds.usdz" camera-controls poster="images/poster.webp" shadow-intensity="1" environment-image="images/aircraft_workshop_01_1k.hdr" exposure="1.7" camera-orbit="52.34deg 88.29deg 874.8m" field-of-view="30deg">
 
           <button class="Hotspot" slot="hotspot-1" data-position="22.114881038306805m 76.41863141465969m 92.72411936367459m" data-normal="0m 3.422854333301474e-8m 0.9999999999999996m" data-visibility-attribute="visible">
@@ -48,20 +48,18 @@
           </div>
         </model-viewer>
 
-        <div class="col-span-full" id="box-materials">
-          <h2> MATERIALS</h2>
-                <ul id="material-list">
-                  <!-- Copies of template -->
-                </ul>
-  
+      </div>
+
+      <div class="col-span-full" id="box-materials">
+        <h2> MATERIALS</h2>
+              <ul id="material-list">
                 <template id="material-template">
                   <li>
                     <h3 class="material-heading"></h3>
                     <p class="material-description"></p>
                   </li>
-                  <!-- populate it  -->
                 </template>
-        </div>
+              </ul>
       </div>
     </div>  
     <!-- Loads <model-viewer> for browsers: -->
